background container alignment fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 
 .App{
   height:100%;
+  width:92%;
   padding:0px;
   margin: 0px;
   
